# rules_rust_bug2980

./: BUILD.bazel  Cargo.toml  MODULE.bazel  README.md
src/: main.rs
